# terrain-modeler

./: .env.example  .gitignore  AGENTS.md  CONTINUE.md  Dockerfile  README.md  REFACTOR_TASKS.md  SPEC.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
data/: app.db
deploy/: Caddyfile  deploy_green.sh  preflight.sh  release.sh  rollback.sh  switch_traffic.sh
desktop/: build-sidecar.sh  package-lock.json  package.json  sidecar_entry.py  terrain-modeler.spec
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: CONTINUE.md  DOCUMENTATION.md  README.md  output-resolution-concurrency-contour-smoothing-review.md  output-resolution-processing-change.md  refactoring-plan.md
docs/references/: Extracting buildings and roads from AWS Open Data using Amazon SageMaker.md
references/: The USGS 3D Elevation Program (3DEP) is excited to announce the availability of a new way to access and process lidar point cloud data from the 3DEP repository.md  list-federal-state-county-city-GIS-servers.md
scripts/: preload_grand_canyon_default.py
src/va_lidar_context/: auth_store.py  cli.py  config.py  constants.py  heights.py  hmac_auth.py  mesh.py  naip.py  pdal_surfaces.py  util.py  vgin_footprints.py  vgin_parcels.py  vgin_tile.py  webapp.py
src/va_lidar_context.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/va_lidar_context/core/: __init__.py  ept.py  geo.py  heights.py  mesh.py  naip.py  raster.py
src/va_lidar_context/parcels/: __init__.py  registry.py  sources.json
src/va_lidar_context/pipeline/: __init__.py  build.py  io.py  report.py  types.py
src/va_lidar_context/providers/: __init__.py  arcgis.py  base.py  hobu_boundaries.py  national_footprints.py  rockyweb_health.py  usgs_ept.py  usgs_index.py  usgs_laz.py  usgs_lidar_index.py  usgs_products.py  vgin.py
src/va_lidar_context/static/: app.css  app.js
src/va_lidar_context/templates/: admin_users.html  index.html  (+3 more)
tests/: conftest.py  test_arcgis.py  test_auth_store.py  test_build_validation.py  test_cli_defaults.py  test_geo.py  test_heights.py  test_hmac_auth.py  test_job_concurrency.py  test_mesh_rotation.py  test_parse_inputs.py  test_pipeline_io.py  test_rockyweb_health.py  test_security.py  test_terrain_resolution_pipeline.py  test_terrain_uv.py  test_usgs_ept.py  test_util.py  test_vgin_tile.py  test_webapp_defaults.py  test_webapp_jobs.py  test_webapp_reports.py
(+7 files in other folders)
