[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "va-lidar-context"
version = "0.1.0"
description = "CLI to build context building meshes from Virginia LiDAR and building footprints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hugo Fenaux" }]

# Core runtime deps. System deps: PDAL/GDAL/GEOS must be installed separately.
dependencies = [
  "requests>=2.31",
  "numpy>=1.26",
  "shapely>=2.0",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "trimesh>=4.0",
  "mapbox-earcut>=1.0.1",
  "matplotlib>=3.8",
  "ezdxf>=1.1",
  "flask>=3.0",
]

[project.scripts]
va-lidar-context = "va_lidar_context.cli:main"
va-lidar-context-web = "va_lidar_context.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]