[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "va-lidar-context"
version = "0.1.0"
description = "CLI to build context building meshes from Virginia LiDAR and building footprints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hugo Fenaux" }]

# Core runtime deps.
dependencies = [
  "requests>=2.31",
  "PyJWT[crypto]>=2.8",
  "numpy>=1.26",
  "shapely>=2.0",
  "pyproj>=3.6",
  "laspy[lazrs]>=2.5",
  "tifffile>=2024.1",
  "Pillow>=10.0",
  "trimesh>=4.0",
  "mapbox-earcut>=1.0.1",
  "matplotlib>=3.8",
  "ezdxf>=1.1",
  "flask>=3.0",
]

[project.scripts]
va-lidar-context = "va_lidar_context.cli:main"
va-lidar-context-web = "va_lidar_context.webapp:main"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
va_lidar_context = [
  "templates/*.html",
  "static/*.css",
  "parcels/sources.json",
  "py.typed",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::pyparsing.PyparsingDeprecationWarning",
]
